fixed bug and made responsive

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </div>
     <div class="container">
       <div class="row">
-        <div class="col s7">
+        <div class="col l7 m12">
           <div id="floating-panel">
             <input id="address" type="text" placeholder="Search a City">
             <input id="submit" class="btn" type="button" value="Zoom to City">
@@ -47,7 +47,7 @@
           </div>
               <div id="map"></div>
           </div>
-        <div class="col s5">
+        <div class="col l5 m12">
             <h4>My Cities</h4>
             <div class="favCities">
               
